classDiagram
    class BreakingConditions {
        << abstract >>
        -query_graph
        -mapping_function
        -index
        -conditions
        +index_condition()
        -_get_breaking_condition_array(elem)
        -_get_elements_with_smaller_id(elem)
        +check(q, t_element)
    }
    class BreakingConditionsNodes {
        -query_graph
        -node_mapping_function
        -index
        -conditions
    }
    class BreakingConditionsEdges {
        -query_graph
        -edge_mapping_function
        -index
        -conditions
    }

    BreakingConditions <|-- BreakingConditionsNodes
    BreakingConditions <|-- BreakingConditionsEdges
